[project]
name = "lm-studio-remote"
version = "0.1.0"
description = "LM Studio remote tui"
readme = "README.md"
requires-python = ">=3.14"
dependencies = [
    "httpx>=0.28.1",
    "textual>=8.2.8",
]

[dependency-groups]
dev = [
    "pyright>=1.1.411",
    "pytest>=9.1.1",
    "pytest-asyncio>=1.4.0",
    "ruff>=0.15.20",
]

[tool.pytest.ini_options]
testpaths = ["test"]
asyncio_mode = "auto"
